Completed what was left of the microservice. Needs testing unfortunately.
