# swagger_server/controllers/history_controller.py
@@ -3,6 +3,7 @@ import six
 
 from swagger_server.models.error import Error  # noqa: E501
 from swagger_server.models.history import History  # noqa: E501
+from swagger_server.models.identifier import Identifier
 from swagger_server.models.user_genres import UserGenres  # noqa: E501
 from swagger_server.models.user_metrics import UserMetrics  # noqa: E501
 from swagger_server import util
@@ -11,6 +12,7 @@ from collections import Counter
 import requests
 from swagger_server.controllers.authorization_controller import is_valid_token
 
+TYA_SERVER = 'http://10.1.1.2:8001'
 
 def check_auth(required_scopes=None):
     """
@@ -21,10 +23,10 @@ def check_auth(required_scopes=None):
     if not token or not is_valid_token(token):
         error = Error(code="401", message="Unauthorized: Missing or invalid token")
         return False, (error, 401)
-    return True, None
+    return True, None, token
 
 
-def delete_artist_history(artist_id):  # noqa: E501
+def delete_artist_history(body):  # noqa: E501
     """Deletes an artist from user&#x27;s history.
 
     Delete an user&#x27;s artist history. # noqa: E501
@@ -37,35 +39,44 @@ def delete_artist_history(artist_id):  # noqa: E501
     """Add a new track to the database"""
 
     # Verificar autenticación defensiva
-    authorized, error_response = check_auth(required_scopes=['write:tracks'])
+    authorized, error_response, token = check_auth(required_scopes=['write:tracks'])
     if not authorized:
         return error_response
     
     if not connexion.request.is_json:
         return Error(code="400", message="Invalid JSON"), 400
     
+    user = is_valid_token(token)
+    user_id = user.idUsuario
+    print(user_id)
+    
     try:
         connection = dbConectar()
         cursor = connection.cursor()
 
+        if connexion.request.is_json:
+            body = Identifier.from_dict(connexion.request.get_json())  # noqa: E501
+
         # Deleting artist
-        sql = """DELETE FROM HistorialCanciones
+        sql = """DELETE FROM HistorialArtistas
                     WHERE idUsuario = %s AND idArtista = %s """
         cursor.execute(sql, 
-                       (user_id, artist_id))
+                       (user_id, body.id))
 
         connection.commit()
-        dbDesconectar()
-        return True
 
+        return True
     except Exception as e:
         print(f"Error deleting artist history: {e}")
-        connection.rollback()
-        dbDesconectar()
+        if connection:
+            connection.rollback()
         return False
+    finally:
+        if connection:
+            dbDesconectar()
 
 
-def delete_song_history(song_id):  # noqa: E501
+def delete_song_history(body):  # noqa: E501
     """Deletes a song from user&#x27;s history.
 
     Delete an user&#x27;s song history. # noqa: E501
@@ -76,32 +87,38 @@ def delete_song_history(song_id):  # noqa: E501
     :rtype: None
     """
     # Verificar autenticación defensiva
-    authorized, error_response = check_auth(required_scopes=['write:tracks'])
+    authorized, error_response, token = check_auth(required_scopes=['write:tracks'])
     if not authorized:
         return error_response
     
     if not connexion.request.is_json:
         return Error(code="400", message="Invalid JSON"), 400
     
+    user = is_valid_token(token)
+    user_id = user.idUsuario
+    
     try:
         connection = dbConectar()
         cursor = connection.cursor()
+
+        if connexion.request.is_json:
+            body = Identifier.from_dict(connexion.request.get_json())  # noqa: E501
 
         # Deleting song
         sql = """DELETE FROM HistorialCanciones
                     WHERE idUsuario = %s AND idCancion = %s """
         cursor.execute(sql, 
-                       (user_id, song_id))
+                       (user_id, body.id))
 
         connection.commit()
-        dbDesconectar()
-        return True
-
     except Exception as e:
         print(f"Error deleting song history: {e}")
-        connection.rollback()
-        dbDesconectar()
+        if connection:
+            connection.rollback()
         return False
+    finally:
+        if connection:
+            dbDesconectar()
 
 
 def get_genre_count():  # noqa: E501
@@ -113,13 +130,16 @@ def get_genre_count():  # noqa: E501
     :rtype: List[UserGenres]
     """
     # Verificar autenticación defensiva
-    authorized, error_response = check_auth(required_scopes=['write:tracks'])
+    authorized, error_response, token = check_auth(required_scopes=['write:tracks'])
     if not authorized:
         return error_response
     
     if not connexion.request.is_json:
         return Error(code="400", message="Invalid JSON"), 400
     
+    user = is_valid_token(token)
+    user_id = user.idUsuario
+
     try:
         connection = dbConectar()
         cursor = connection.cursor()
@@ -134,22 +154,21 @@ def get_genre_count():  # noqa: E501
         song_rows = cursor.fetchall()
         song_ids = [row[0] for row in song_rows]  #song list 4 later
 
-        dbDesconectar()
-
         if not song_ids:
             return []
 
         # Fetch the genres
         genre_counter = Counter() #util
+        genre = []
         for song_id in song_ids:
             try:
                 # En el ae hay que poner el endpoint que me de los generos qliaos
-                response = requests.get(f"http://ae")
+                response = requests.get(f"{TYA_SERVER}/song/{song_id}") #TODO
                 if response.status_code == 200: #if OK
                     song_data = response.json()
-                    genre = song_data.get("genre") #(?) TODO genre es una lista uergfgg
-                    if genre:
-                        genre_counter[genre] += 1
+                    genre = song_data.get("genres") or [] 
+                    for gen in genre:
+                        genre_counter[gen] += 1
             except Exception as e:
                 print(f"Error fetching song {song_id}: {e}")
 
@@ -159,12 +178,14 @@ def get_genre_count():  # noqa: E501
             result.append(UserGenres(genre=genre, count=count))
 
         return result
-
     except Exception as e:
-        connection.rollback()
-        dbDesconectar()
-        #Si da error...
-        return []
+        print(f"Error deleting artist history: {e}")
+        if connection:
+            connection.rollback()
+        return None
+    finally:
+        if connection:
+            dbDesconectar()
 
 
 def get_user_metrics():  # noqa: E501
@@ -177,13 +198,16 @@ def get_user_metrics():  # noqa: E501
     """
 
     # Verificar autenticación defensiva
-    authorized, error_response = check_auth(required_scopes=['write:tracks'])
+    authorized, error_response, token = check_auth(required_scopes=['write:tracks'])
     if not authorized:
         return error_response
     
     if not connexion.request.is_json:
         return Error(code="400", message="Invalid JSON"), 400
     
+    user = is_valid_token(token)
+    user_id = user.idUsuario
+
     try:
         connection = dbConectar()
         cursor = connection.cursor()
@@ -224,12 +248,9 @@ def get_user_metrics():  # noqa: E501
         last_listen = listening_row[1]
 
         if first_listen and last_listen:
-            listening_period = (first_listen - last_listen).days #días
-            listening_period = listening_period * 24 *60 #minutos
+            listening_period = (last_listen - first_listen).total_seconds() / 60
         else:
             listening_period = 0
-
-        dbDesconectar()
 
         # Build and return the UserMetrics object
         metrics = UserMetrics(
@@ -237,14 +258,17 @@ def get_user_metrics():  # noqa: E501
             topArtistId = top_artist_id,
             topSongId = top_song_id
         )
-        return metrics
 
+        return metrics
     except Exception as e:
-        print(f"Error getting user metrics: {e}")
-        connection.rollback()
-        dbDesconectar()
-        # Si da error...
-        return UserMetrics(top_artist=None, top_song=None, total_listening_time=0)
+        print(f"Error deleting artist history: {e}")
+        if connection:
+            connection.rollback()
+        return None
+    finally:
+        if connection:
+            dbDesconectar()
+
 
 
 def new_song_history(body):  # noqa: E501
@@ -258,13 +282,16 @@ def new_song_history(body):  # noqa: E501
     :rtype: None
     """
     # Verificar autenticación defensiva
-    authorized, error_response = check_auth(required_scopes=['write:tracks'])
+    authorized, error_response, token = check_auth(required_scopes=['write:tracks'])
     if not authorized:
         return error_response
     
     if not connexion.request.is_json:
         return Error(code="400", message="Invalid JSON"), 400
     
+    user = is_valid_token(token)
+    user_id = user.idUsuario
+
     try:
         connection = dbConectar()
         # Schizoid
@@ -284,16 +311,17 @@ def new_song_history(body):  # noqa: E501
             body.startDate,
             body.playbacks,
         ))
-        #Nosecomohacereluser_id,investigarlo con lupa TODO
 
         connection.commit()
-        dbDesconectar()
         return True
     except Exception as e:
         print(f"Error adding song history: {e}")
-        connection.rollback()
-        dbDesconectar()
-    return False
+        if connection:
+            connection.rollback()
+        return False
+    finally:
+        if connection:
+            dbDesconectar()
 
 
 def post_artist_history(body):  # noqa: E501
@@ -307,13 +335,15 @@ def post_artist_history(body):  # noqa: E501
     :rtype: None
     """
     # Verificar autenticación defensiva
-    authorized, error_response = check_auth(required_scopes=['write:tracks'])
+    authorized, error_response, token = check_auth(required_scopes=['write:tracks'])
     if not authorized:
         return error_response
     
     if not connexion.request.is_json:
         return Error(code="400", message="Invalid JSON"), 400
     
+    user = is_valid_token(token)
+    user_id = user.idUsuario
 
     try: 
         connection = dbConectar()
@@ -322,7 +352,7 @@ def post_artist_history(body):  # noqa: E501
         if connexion.request.is_json:
             body = History.from_dict(connexion.request.get_json())  # noqa: E501
 
-                #Insertar en DB
+        #Insertar en DB
         sql = """INSERT INTO HistorialArtistas (idUsuario, idArtista, fechaPrimera, fechaUltima, escuchas)
                 VALUES (%s, %s, %s, NOW(), %s) 
                 ON CONFLICT (idUsuario, idArtista)
@@ -334,13 +364,14 @@ def post_artist_history(body):  # noqa: E501
             body.startDate,
             body.playbacks,
         ))
-        #Nosecomohacereluser_id,investigarlo con lupa
 
-        #TODO -- Actualizar artista favorito si es necesario T~T
         connection.commit()
-        dbDesconectar()
+        return True
     except Exception as e:
         print(f"Error adding artist history: {e}")
-        connection.rollback()
-        dbDesconectar()
-    return False
+        if connection:
+            connection.rollback()
+        return False
+    finally:
+        if connection:
+            dbDesconectar()
