# swagger_server/models/identifier.py
@@ -1,0 +1,65 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Identifier(Model):
+    """NOTE: This class is NOT auto generated by the swagger code generator program.
+
+    Edit the class manually xP
+    """
+    def __init__(self, id: int=None):  # noqa: E501
+        """Identifier - a model defined in Swagger
+
+        :param id: The id of this Identifier.  # noqa: E501
+        :type id: int
+        """
+        self.swagger_types = {
+            'id': int
+        }
+
+        self.attribute_map = {
+            'id': 'id'
+        }
+        self._id = id
+    @classmethod
+    def from_dict(cls, dikt) -> 'Identifier':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Identifier of this Identifier.  # noqa: E501
+        :rtype: Identifier
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def id(self) -> int:
+        """Gets the id of this Identifier.
+
+        Unique identifier of the Identifier record  # noqa: E501
+
+        :return: The id of this Identifier.
+        :rtype: int
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id: int):
+        """Sets the id of this Identifier.
+
+        Unique identifier of the history record  # noqa: E501
+
+        :param id: The id of this Identifier.
+        :type id: int
+        """
+        if id is None:
+            raise ValueError("Invalid value for `id`, must not be `None`")  # noqa: E501
+
+        self._id = id
