# swagger_server/swagger/swagger.yaml
@@ -45,7 +45,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
       security:
-      - oversounds_auth:
+      - oversound_auth:
         - write
         - read
       x-openapi-router-controller: swagger_server.controllers.history_controller
@@ -55,15 +55,8 @@ paths:
       summary: Deletes an artist from user's history.
       description: Delete an user's artist history.
       operationId: delete_artist_history
-      parameters:
-      - name: artistId
-        in: query
-        description: Artist id to delete.
-        required: true
-        style: form
-        explode: true
-        schema:
-          type: string
+      requestBody:
+        $ref: "#/components/requestBodies/Identifier"
       responses:
         "200":
           description: Artist deleted from history
@@ -76,7 +69,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
       security:
-      - oversounds_auth:
+      - oversound_auth:
         - write
         - read
       x-openapi-router-controller: swagger_server.controllers.history_controller
@@ -108,7 +101,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
       security:
-      - oversounds_auth:
+      - oversound_auth:
         - write
         - read
       x-openapi-router-controller: swagger_server.controllers.history_controller
@@ -118,15 +111,8 @@ paths:
       summary: Deletes a song from user's history.
       description: Delete an user's song history.
       operationId: delete_song_history
-      parameters:
-      - name: songId
-        in: query
-        description: Song id to delete.
-        required: true
-        style: form
-        explode: true
-        schema:
-          type: integer
+      requestBody:
+        $ref: "#/components/requestBodies/Identifier"
       responses:
         "200":
           description: Song deleted
@@ -139,7 +125,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
       security:
-      - oversounds_auth:
+      - oversound_auth:
         - write
         - read
       x-openapi-router-controller: swagger_server.controllers.history_controller
@@ -168,7 +154,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
       security:
-      - oversounds_auth:
+      - oversound_auth:
         - read
       x-openapi-router-controller: swagger_server.controllers.history_controller
   /history/user-grenres:
@@ -200,7 +186,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
       security:
-      - oversounds_auth:
+      - oversound_auth:
         - read
       x-openapi-router-controller: swagger_server.controllers.history_controller
   /recommendations/artist:
@@ -231,7 +217,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
       security:
-      - oversounds_auth:
+      - oversound_auth:
         - read
       x-openapi-router-controller: swagger_server.controllers.recommendations_controller
   /recommendations/song:
@@ -262,7 +248,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
       security:
-      - oversounds_auth:
+      - oversound_auth:
         - read
       x-openapi-router-controller: swagger_server.controllers.recommendations_controller
   /statistics/metrics/song/{songId}:
@@ -396,6 +382,15 @@ components:
           type: string
           description: Start date and time of the record
           format: date-time
+    Identifier:
+      type: object
+      required:
+        - id
+      properties:
+        id: 
+          type: integer
+          description: Some ID
+          example: 10
     UserMetrics:
       type: object
       properties:
@@ -546,10 +541,16 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/History"
+    Identifier:
+      description: Some ID 
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/Identifier"
   securitySchemes:
-    oversounds_auth:
+    oversound_auth:
       type: apiKey
-      name: token
+      name: oversound_auth
       in: cookie
-      x-apikeyInfoFunc: swagger_server.controllers.authorization_controller.check_oversounds_auth
+      x-apikeyInfoFunc: swagger_server.controllers.authorization_controller.check_oversound_auth
 
